--- a/style.css
+++ b/style.css
@@ -261,3 +261,144 @@ tr
  {
      padding-left: 5.5rem;
  }
+
+ /* form */
+
+ #financial-form
+ {
+    /* background-color: red;  */
+     background-image: url("./images/calculator-bg.jpg");
+     width: 100%;
+ }
+
+ .img-cont{
+     position: relative;
+     width: 100%;
+     height: 100%;
+     
+     
+ }
+
+ .img-cont img{
+     max-width: 70%;
+     
+     position: absolute;
+     bottom: 0;
+     right: 20%;
+     
+ }
+
+ label
+ {
+    color: white;
+ }
+
+ .button3
+ { 
+    width: 10rem;
+    height: 2.5rem;
+    background-color: #ff511a;
+    float: left;
+
+ }
+
+ .form-control:focus
+ {
+     background-color: rgba(121,134,151, 0.7);
+     border: 0;
+     color: white;
+ }
+
+.form-control
+{
+    background-color: rgba(121,134,151, 0.7);
+    border: 0;
+    color: white;
+
+}
+
+/* testimonials */
+
+.testimonials-h1
+{   font-weight: 600;
+}
+.testimonials-h2
+{
+    font-weight: 700;
+
+}
+.test-o
+{
+    padding: 0rem 16rem;
+    padding-top: 2rem;
+    
+}
+
+.test-row
+{
+    border-radius: 1rem;
+    box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.57);
+    -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.57);
+    -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.57);
+}
+.owl-theme .owl-dots .owl-dot.active span
+{
+    background-color: #ff511a;
+}
+
+
+
+.owl-theme .owl-dots .owl-dot span
+{
+    background-color: #ffa88c ;
+}
+.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span
+{
+    background-color: none;
+}
+
+.icon-test
+{
+    font-size: 3rem;
+    color: white;
+    background-color:#198754;
+    padding: 0.7rem 0.9rem;
+    border-radius: 0.5rem;
+}
+.test-row img
+{
+    margin-left: 1rem;
+}
+
+
+/* footer */
+
+.footer-company
+{
+    background-color:#212741;
+    padding: 6rem;
+}
+
+.fot-logo
+{
+    width: 80%;
+    height: auto;
+}
+
+.footer-company-2
+
+{
+    background-color:#181d30;
+}
+
+.footer-p
+{
+    margin-bottom: 0;
+    padding: 2rem;
+}
+
+.designer:hover
+{
+    color: #0d6efd;
+
+}
